
New features:
- Added normal Dutch localization (moved existing nl to nl-be) - thanks to Patrick Donker.
- Hide shoutbox input for users without write permissions - thanks to Felix Eckhofer.
- Added a /clear command to clear the chatlist of all text - thanks to Borislav Manolov.

Bugfixes:
- Updated Russian and Norwegian localizations - thanks to Il'ya A. Lykov.
- Methods called statically are now declared as static to meet php 5.4 strict standards.
- Fixed case when messages were not displayed to users on page load if last message was deleted - thanks to KEMBL KEMBL.
- Fixed exploit using img tag to pass text request var.
- Change preg_replace with /e to preg_replace_callback in AJAXChatTemplate.php - thanks to Jan Kröpke.
- Fixed browser crashing bug with certain long words - thanks to Clint.
- Properly detect and report mysqli connection errors.
- Fixed a case where the default channel could be blocked from the limitChannelList config option.
- Fix potential conflict between php and mysql timezones by using mysql's FROM_UNIXTIME(). - thanks to ManOnDaMoon.
- Normalized sound volumes a bit.
- Fixed mybb integration database connection. Connection details should be pulled automatically now.
- Fidex mybb integration guest logins to accept guests that don't enter a username (assign numbers like other versions).

Version 0.8.8 (?.?.2014)
-------------------------------
Notice:
- If you are using the javascript override handleCustomInfoMessage in custom.js, you should make it return true if you capture an event

New Features:
- Private messages now have their own sound - thanks to marquisite.
- Added two new sounds - one is extra for your customization pleasure.
- Added a custom user group and banned user group for customization and integration - thanks to marquisite.
- Added a debug mode to chat.js - thanks to Sophist-UK

Bugfixes:
- HTML is now stripped from [IMG] tag URLs, and tag parsing errors will no longer crash chat. - thanks to 