@@ -857,4 +857,5 @@ New Features:
 - Added a debug mode to chat.js - thanks to Sophist-UK
 
 Bugfixes:
-- HTML is now stripped from [IMG] tag URLs, and tag parsing errors will no longer crash chat. - thanks to 
+- HTML is now stripped from [IMG] tag URLs, and tag parsing errors will no longer crash chat. - thanks to gWorldz
+- Nesting an [IMG] inside a [URL] tag will now only open the URL instead of also opening the image - thanks to James Almer.
